--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/odometer.css">
     <script src="script/script.js"></script>
-    <script src="script/odometer.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="left">
             <div class="name" contenteditable="true" spellcheck="false">LEFT</div>
-            <div class="counter odometer" id="leftCounter">0</div>
+            <div class="counter" id="leftCounter">0</div>
         </div>
         <div class="right">
             <div class="name" contenteditable="true" spellcheck="false">RIGHT</div>
-            <div class="counter odometer" id="rightCounter">0</div>
+            <div class="counter" id="rightCounter">0</div>
         </div>
     </div>
 </body>
